--- a/api/api-facade/api-etcd/pom.xml
+++ b/api/api-facade/api-etcd/pom.xml
@@ -67,12 +67,11 @@
 			<artifactId>dirigible-engine-javascript</artifactId>
 			<version>5.10.0-SNAPSHOT</version>
 		</dependency>
-
-		<!-- Etcd dependencies -->
-		
-		<!-- / Etcd dependencies -->
-		
-
+		<dependency>
+  			<groupId>io.etcd</groupId>
+			<artifactId>jetcd-core</artifactId>
+			<version>0.5.0</version>
+		</dependency>	
 		<dependency>
 			<groupId>org.eclipse.dirigible</groupId>
 			<artifactId>dirigible-commons-test</artifactId>
