--- a/ide/services/ide-group-all/pom.xml
+++ b/ide/services/ide-group-all/pom.xml
@@ -38,6 +38,11 @@
         </dependency>
         <dependency>
             <groupId>org.eclipse.dirigible</groupId>
+            <artifactId>dirigible-ide-service-core</artifactId>
+            <version>5.10.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>org.eclipse.dirigible</groupId>
             <artifactId>dirigible-ide-service-databases</artifactId>
             <version>5.10.0-SNAPSHOT</version>
         </dependency>
