--- a/modules/engines/engine-odata/pom.xml
+++ b/modules/engines/engine-odata/pom.xml
@@ -39,6 +39,16 @@
 		</dependency>
 		<dependency>
 			<groupId>org.eclipse.dirigible</groupId>
+			<artifactId>dirigible-odata-api</artifactId>
+			<version>5.10.0-SNAPSHOT</version>
+		</dependency>
+		<dependency>
+			<groupId>org.eclipse.dirigible</groupId>
+			<artifactId>dirigible-odata-core</artifactId>
+			<version>5.10.0-SNAPSHOT</version>
+		</dependency>
+		<dependency>
+			<groupId>org.eclipse.dirigible</groupId>
 			<artifactId>dirigible-repository-api</artifactId>
 			<version>5.10.0-SNAPSHOT</version>
 		</dependency>
