--- a/modules/engines/engine-odata/pom.xml
+++ b/modules/engines/engine-odata/pom.xml
@@ -64,6 +64,11 @@
 		</dependency>
 		<dependency>
 			<groupId>org.eclipse.dirigible</groupId>
+			<artifactId>dirigible-engine-javascript</artifactId>
+			<version>5.10.0-SNAPSHOT</version>
+		</dependency>
+		<dependency>
+			<groupId>org.eclipse.dirigible</groupId>
 			<artifactId>dirigible-api-facade-database</artifactId>
 			<version>5.10.0-SNAPSHOT</version>
 			<exclusions>
