--- a/api/api-facade/api-tests/pom.xml
+++ b/api/api-facade/api-tests/pom.xml
@@ -117,6 +117,11 @@
             <artifactId>dirigible-api-facade-platform</artifactId>
             <version>5.9.0-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>org.eclipse.dirigible</groupId>
+            <artifactId>dirigible-api-facade-redis</artifactId>
+            <version>5.9.0-SNAPSHOT</version>
+        </dependency>
 
         <dependency>
             <groupId>org.eclipse.dirigible</groupId>
@@ -167,6 +172,11 @@
             <groupId>org.eclipse.dirigible</groupId>
             <artifactId>dirigible-api-javascript-platform</artifactId>
             <version>5.9.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+        	<groupId>org.eclipse.dirigible</groupId>
+        	<artifactId>dirigible-ext-redis</artifactId>
+        	<version>5.9.0-SNAPSHOT</version>
         </dependency>
 
         <dependency>
