--- a/api/api-facade/api-tests/pom.xml
+++ b/api/api-facade/api-tests/pom.xml
@@ -117,6 +117,11 @@
             <artifactId>dirigible-api-facade-platform</artifactId>
             <version>5.10.0-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>org.eclipse.dirigible</groupId>
+            <artifactId>dirigible-api-facade-rabbitmq</artifactId>
+            <version>5.10.0-SNAPSHOT</version>
+        </dependency>
 
         <dependency>
             <groupId>org.eclipse.dirigible</groupId>
@@ -168,7 +173,17 @@
             <artifactId>dirigible-api-javascript-platform</artifactId>
             <version>5.10.0-SNAPSHOT</version>
         </dependency>
-
+        <dependency>
+            <groupId>org.eclipse.dirigible</groupId>
+            <artifactId>dirigible-ext-rabbitmq</artifactId>
+            <version>5.10.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>org.eclipse.dirigible</groupId>
+            <artifactId>dirigible-api-javascript-messaging</artifactId>
+            <version>5.10.0-SNAPSHOT</version>
+        </dependency>
+        
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
