--- a/api/api-facade/api-elasticsearch/pom.xml
+++ b/api/api-facade/api-elasticsearch/pom.xml
@@ -69,7 +69,13 @@
 		</dependency>
 
 		<!-- Elasticsearch dependencies -->
-		
+
+		<dependency>
+			<groupId>org.elasticsearch.client</groupId>
+			<artifactId>elasticsearch-rest-high-level-client</artifactId>
+			<version>7.7.1</version>
+		</dependency>
+
 		<!-- / Elasticsearch dependencies -->
 		
 
