Reverted old Apache Spark test. Added new test for Spark.
Signed-off-by: borisnen <26414287+BorisNen@users.noreply.github.com>

--- a/api/api-facade/api-spark/pom.xml
+++ b/api/api-facade/api-spark/pom.xml
@@ -94,12 +94,13 @@
 			<version>5.10.0-SNAPSHOT</version>
 			<scope>test</scope>
 		</dependency>
-		<dependency>
-			<groupId>org.eclipse.dirigible</groupId>
-			<artifactId>dirigible-engine-javascript-graalvm</artifactId>
-			<version>5.10.0-SNAPSHOT</version>
-			<scope>test</scope>
-		</dependency>
+<!-- Conflicts with other dependencies -->
+<!--		<dependency>-->
+<!--			<groupId>org.eclipse.dirigible</groupId>-->
+<!--			<artifactId>dirigible-engine-javascript-graalvm</artifactId>-->
+<!--			<version>5.10.0-SNAPSHOT</version>-->
+<!--			<scope>test</scope>-->
+<!--		</dependency>-->
 		<dependency>
 			<groupId>org.eclipse.dirigible</groupId>
 			<artifactId>dirigible-database-derby</artifactId>
