--- a/releng/desktop-all/pom.xml
+++ b/releng/desktop-all/pom.xml
@@ -104,7 +104,7 @@
 									<overwrite>true</overwrite>
 									<resources>
 										<resource>
-											<directory>/target</directory>
+											<directory>target</directory>
 											<includes>
 												<include>ROOT.war</include>
 											</includes>
