--- a/releng/server-oauth/pom.xml
+++ b/releng/server-oauth/pom.xml
@@ -100,6 +100,13 @@
 		 	<version>5.11.0-SNAPSHOT</version>
 		</dependency>
 
+		<!-- Security -->
+		<dependency>
+			<groupId>org.eclipse.dirigible</groupId>
+			<artifactId>dirigible-security</artifactId>
+			<version>5.11.0-SNAPSHOT</version>
+	   </dependency>
+
 		<!-- API -->
 		<dependency>
 		 	<groupId>org.eclipse.dirigible</groupId>
