--- a/api/api-facade/api-rabbitmq/pom.xml
+++ b/api/api-facade/api-rabbitmq/pom.xml
@@ -90,7 +90,12 @@
 			<version>5.10.0-SNAPSHOT</version>
 			<scope>test</scope>
 		</dependency>
-
+		<dependency>
+		    <groupId>io.github.hakky54</groupId>
+		    <artifactId>logcaptor</artifactId>
+		    <version>2.5.0</version>
+		    <scope>test</scope>
+		</dependency>
 	</dependencies>
 
 	<properties>
