--- a/api/api-facade/api-etcd/pom.xml
+++ b/api/api-facade/api-etcd/pom.xml
@@ -68,6 +68,17 @@
 			<version>0.5.0</version>
 		</dependency>
 		<dependency>
+			<groupId>io.etcd</groupId>
+			<artifactId>jetcd-launcher</artifactId>
+			<version>0.5.4</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>io.etcd</groupId>
+			<artifactId>jetcd-test</artifactId>
+			<version>0.5.4</version>
+		</dependency>
+		<dependency>
 			<groupId>org.eclipse.dirigible</groupId>
 			<artifactId>dirigible-commons-test</artifactId>
 			<version>5.10.0-SNAPSHOT</version>
