Fixes #852 [Releng] Kyma & CF - Set DIRIGIBLE_OAUTH_ENABLED

--- a/releng/sap-cf-all/src/main/resources/dirigible.properties
+++ b/releng/sap-cf-all/src/main/resources/dirigible.properties
@@ -17,3 +17,4 @@ DIRIGIBLE_PRODUCT_TYPE=all
 DIRIGIBLE_INSTANCE_NAME=SAP Cloud Platform Cloud Foundry
 DIRIGIBLE_DATABASE_PROVIDER=local
 DIRIGIBLE_SCHEDULER_MEMORY_STORE=true
+DIRIGIBLE_OAUTH_ENABLED=true
