--- a/releng/sap-kyma-all/src/main/resources/dirigible.properties
+++ b/releng/sap-kyma-all/src/main/resources/dirigible.properties
@@ -16,3 +16,4 @@ DIRIGIBLE_PRODUCT_REPOSITORY=https://github.com/eclipse/dirigible
 DIRIGIBLE_PRODUCT_TYPE=all
 DIRIGIBLE_INSTANCE_NAME=SAP Cloud Platform Kyma
 DIRIGIBLE_DATABASE_PROVIDER=local
+DIRIGIBLE_OAUTH_ENABLED=true
