--- a/api/api-facade/api-tests/pom.xml
+++ b/api/api-facade/api-tests/pom.xml
@@ -117,6 +117,11 @@
             <artifactId>dirigible-api-facade-platform</artifactId>
             <version>5.10.0-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>org.eclipse.dirigible</groupId>
+            <artifactId>dirigible-api-facade-elasticsearch</artifactId>
+            <version>5.10.0-SNAPSHOT</version>
+        </dependency>
 
         <dependency>
             <groupId>org.eclipse.dirigible</groupId>
@@ -166,6 +171,12 @@
         <dependency>
             <groupId>org.eclipse.dirigible</groupId>
             <artifactId>dirigible-api-javascript-platform</artifactId>
+            <version>5.10.0-SNAPSHOT</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.eclipse.dirigible</groupId>
+            <artifactId>dirigible-ext-elasticsearch</artifactId>
             <version>5.10.0-SNAPSHOT</version>
         </dependency>
 
