--- a/modules/engines/engine-javascript-graalvm/pom.xml
+++ b/modules/engines/engine-javascript-graalvm/pom.xml
@@ -118,6 +118,12 @@
 			<version>5.10.0-SNAPSHOT</version>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.testcontainers</groupId>
+			<artifactId>elasticsearch</artifactId>
+			<version>1.15.3</version>
+			<scope>test</scope>
+		</dependency>
 	</dependencies>
 
 	<properties>
