--- a/api/api-facade/api-tests/pom.xml
+++ b/api/api-facade/api-tests/pom.xml
@@ -178,6 +178,12 @@
         	<artifactId>dirigible-ext-redis</artifactId>
         	<version>5.9.0-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>org.testcontainers</groupId>
+            <artifactId>testcontainers</artifactId>
+            <version>1.15.3</version>
+            <scope>test</scope>
+        </dependency>
 
         <dependency>
             <groupId>junit</groupId>
@@ -193,6 +199,12 @@
             <groupId>org.hamcrest</groupId>
             <artifactId>hamcrest-all</artifactId>
             <version>${hamcrest.all.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.testcontainers</groupId>
+            <artifactId>testcontainers</artifactId>
+            <version>1.15.3</version>
+            <scope>compile</scope>
         </dependency>
     </dependencies>
 
