Removed conflicting dependencies. Created constants file for testcontainer tests.
Signed-off-by: borisnen <26414287+BorisNen@users.noreply.github.com>

--- a/modules/engines/engine-javascript-graalvm/pom.xml
+++ b/modules/engines/engine-javascript-graalvm/pom.xml
@@ -291,22 +291,22 @@
 			<version>5.11.0-SNAPSHOT</version>
 			<scope>test</scope>
 		</dependency>
-		<dependency>
-			<groupId>io.etcd</groupId>
-			<artifactId>jetcd-core</artifactId>
-			<version>0.5.0</version>
-		</dependency>
-		<dependency>
-			<groupId>io.etcd</groupId>
-			<artifactId>jetcd-launcher</artifactId>
-			<version>0.5.4</version>
-			<scope>test</scope>
-		</dependency>
-		<dependency>
-			<groupId>io.etcd</groupId>
-			<artifactId>jetcd-test</artifactId>
-			<version>0.5.4</version>
-		</dependency>
+<!--		<dependency>-->
+<!--			<groupId>io.etcd</groupId>-->
+<!--			<artifactId>jetcd-core</artifactId>-->
+<!--			<version>0.5.0</version>-->
+<!--		</dependency>-->
+<!--		<dependency>-->
+<!--			<groupId>io.etcd</groupId>-->
+<!--			<artifactId>jetcd-launcher</artifactId>-->
+<!--			<version>0.5.4</version>-->
+<!--			<scope>test</scope>-->
+<!--		</dependency>-->
+<!--		<dependency>-->
+<!--			<groupId>io.etcd</groupId>-->
+<!--			<artifactId>jetcd-test</artifactId>-->
+<!--			<version>0.5.4</version>-->
+<!--		</dependency>-->
 		<dependency>
 			<groupId>org.testcontainers</groupId>
 			<artifactId>testcontainers</artifactId>
