--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -15,7 +15,7 @@ jobs:
       with:
         java-version: 13
     - name: Maven Build
-      run: mvn clean install -Drabbitmq-test -Dredis-test -Delastic-test -Detcd-test
+      run: mvn clean install
     - name: Docker Login
       run: docker login -u ${{secrets.DOCKER_USER}} -p ${{secrets.DOCKER_PASSWORD}}
     - name: Push Anonymous
