--- a/modules/odata/odata-api/pom.xml
+++ b/modules/odata/odata-api/pom.xml
@@ -35,7 +35,8 @@
             <groupId>org.eclipse.dirigible</groupId>
             <artifactId>dirigible-commons-config</artifactId>
             <version>5.12.0-SNAPSHOT</version>
-        </dependency><dependency>
+        </dependency>
+		<dependency>
             <groupId>org.eclipse.dirigible</groupId>
             <artifactId>dirigible-commons-api</artifactId>
             <version>5.12.0-SNAPSHOT</version>
@@ -72,6 +73,11 @@
 		    <groupId>org.eclipse.persistence</groupId>
 		    <artifactId>jakarta.persistence</artifactId>
 		    <version>${persistence.api.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
+			<version>${org.projectlombok.version}</version>
 		</dependency>
 		
     </dependencies>
