--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -12,6 +12,7 @@ jobs:
     - uses: actions/checkout@v2
       with:
         token: ${{ secrets.GH_TOKEN }}
+        fetch-depth: 0
     - name: Set up JDK 13
       uses: actions/setup-java@v1
       with:
