--- a/ide/ui/ide-group-all/pom.xml
+++ b/ide/ui/ide-group-all/pom.xml
@@ -191,5 +191,10 @@
 			<artifactId>dirigible-ide-ui-form-builder</artifactId>
 			<version>6.0.0-SNAPSHOT</version>
 		</dependency>
+		<dependency>
+			<groupId>org.eclipse.dirigible</groupId>
+			<artifactId>dirigible-ide-ui-csv</artifactId>
+			<version>6.0.0-SNAPSHOT</version>
+		</dependency>
 	</dependencies>
 </project>
