--- a/ext/ext-api/api-kafka/pom.xml
+++ b/ext/ext-api/api-kafka/pom.xml
@@ -5,13 +5,13 @@
 
 	<parent>
 		<groupId>org.eclipse.dirigible</groupId>
-		<artifactId>dirigible-api-facade-parent</artifactId>
+		<artifactId>dirigible-ext-api-parent</artifactId>
 		<version>6.0.0-SNAPSHOT</version>
 		<relativePath>../pom.xml</relativePath>
 	</parent>
 
 	<name>API - Facade - Kafka</name>
-	<artifactId>dirigible-api-facade-mongodb</artifactId>
+	<artifactId>dirigible-api-facade-kafka</artifactId>
 	<packaging>jar</packaging>
 
 	<build>
@@ -68,11 +68,21 @@
 			<version>6.0.0-SNAPSHOT</version>
 		</dependency>
 
-	    <dependency>
-	        <groupId>org.mongodb</groupId>
-	        <artifactId>mongo-java-driver</artifactId>
-	        <version>${mongodb.version}</version>
-	    </dependency>
+		<dependency>
+			<groupId>org.apache.kafka</groupId>
+			<artifactId>kafka-clients</artifactId>
+			<version>${kafka.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.kafka</groupId>
+			<artifactId>kafka-clients</artifactId>
+			<version>${kafka.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.kafka</groupId>
+			<artifactId>kafka-streams</artifactId>
+			<version>${kafka.version}</version>
+		</dependency>
 
 		<dependency>
 			<groupId>org.eclipse.dirigible</groupId>
